--- a/QComp/QComp.csproj
+++ b/QComp/QComp.csproj
@@ -47,9 +47,12 @@
   <ItemGroup>
     <Compile Include="Helpers\DTE2Helper.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
+    <Compile Include="Models\SaveItem.cs" />
+    <Compile Include="Models\SavesIndex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\QCompWindowCommand.cs" />
     <Compile Include="QCompPackage.cs" />
+    <Compile Include="SavesManager.cs" />
     <Compile Include="source.extension.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -102,6 +105,9 @@
     <PackageReference Include="Community.VisualStudio.VSCT" Version="16.0.29.6" PrivateAssets="all" />
     <PackageReference Include="Community.VisualStudio.Toolkit.17" Version="17.0.507" ExcludeAssets="Runtime" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.9.3168" />
+    <PackageReference Include="System.Text.Json">
+      <Version>8.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
