--- a/QComp/QComp.csproj
+++ b/QComp/QComp.csproj
@@ -45,10 +45,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ComparisonManager.cs" />
     <Compile Include="Helpers\DTE2Helper.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
+    <Compile Include="Models\ComparisonResult.cs" />
     <Compile Include="Models\SaveItem.cs" />
     <Compile Include="Models\SavesIndex.cs" />
+    <Compile Include="Models\TableRow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\QCompWindowCommand.cs" />
     <Compile Include="QCompPackage.cs" />
@@ -57,6 +60,12 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>source.extension.vsixmanifest</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\ComboboxItemWithDelete.xaml.cs">
+      <DependentUpon>ComboboxItemWithDelete.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\ScatterPlot.xaml.cs">
+      <DependentUpon>ScatterPlot.xaml</DependentUpon>
     </Compile>
     <Compile Include="VSCommandTable.cs">
       <AutoGen>True</AutoGen>
@@ -91,6 +100,14 @@
     <Compile Include="ToolWindows\QCompWindowControl.xaml.cs">
       <DependentUpon>QCompWindowControl.xaml</DependentUpon>
     </Compile>
+    <Page Include="UserControls\ComboboxItemWithDelete.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\ScatterPlot.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -100,11 +117,12 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="WindowsBase" />
     <Reference Include="System.ComponentModel.Composition" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Community.VisualStudio.VSCT" Version="16.0.29.6" PrivateAssets="all" />
     <PackageReference Include="Community.VisualStudio.Toolkit.17" Version="17.0.507" ExcludeAssets="Runtime" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.9.3168" />
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.10.2179">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>8.0.3</Version>
     </PackageReference>
